--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 10fr;
-  grid-template-rows: 100px 1fr;
+  grid-template-rows: 100px 1fr 1fr;
 }
 
 .header {
@@ -42,10 +42,66 @@
   transform: translate(-3px, 3px) rotate(-45deg);
 }
 
+.mobile-nav {
+  display: none;
+}
+
+.mobile-nav.is-active {
+  grid-column: 1/3;
+  grid-row: 2/3;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(244, 238, 238);
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.45rem;
+  padding: 1rem;
+  -webkit-animation: fade 0.2s;
+          animation: fade 0.2s;
+}
+.mobile-nav.is-active .nav-element:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.mobile-nav.is-active .links .ig-img {
+  width: 30px;
+}
+.mobile-nav.is-active .links .ig-img:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
+.mobile-nav.is-active .links .github-img {
+  width: 60px;
+}
+.mobile-nav.is-active .links .github-img:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+}
+
+@-webkit-keyframes fade {
+  100% {
+    transform: scale(1);
+  }
+  0% {
+    transform: scale(0.1);
+  }
+}
+
+@keyframes fade {
+  100% {
+    transform: scale(1);
+  }
+  0% {
+    transform: scale(0.1);
+  }
+}
 .nav-bar {
   background-color: rgb(244, 238, 238);
   font-size: 1.35rem;
   grid-column: 1;
+  grid-row: 2/4;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -73,7 +129,7 @@
 }
 
 .main {
-  grid-column: 2/3;
+  grid-column: 2/4;
 }
 
 @media only screen and (min-width: 701px) {
