add add-modal and feature showing all tasks

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 #content {
   font-family: "Poppins", sans-serif;
   height: 100vh;
@@ -130,6 +134,175 @@
 
 .main {
   grid-column: 2/4;
+  grid-row: 2/4;
+}
+
+.main.shrink {
+  grid-row: 3/4;
+  padding-top: 2rem;
+}
+
+.all-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 2rem;
+}
+
+.task-el {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  width: 450px;
+  height: 50px;
+  background-color: rgb(244, 238, 238);
+  border-radius: 20px;
+  padding: 0 0.7rem;
+}
+.task-el .is-done {
+  height: 25px;
+  width: 25px;
+  margin: 1rem;
+}
+.task-el .show-btn {
+  margin-left: auto;
+  color: white;
+  background-color: red;
+  padding: 0.4rem;
+  border-radius: 10px;
+  font-weight: 600;
+}
+
+.add-task-el {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  width: 450px;
+  height: 50px;
+  background-color: rgb(244, 238, 238);
+  border-radius: 20px;
+  padding: 0 0.7rem;
+}
+.add-task-el .new-btn {
+  background-color: rgb(221, 76, 61);
+  color: white;
+  background-color: red;
+  padding: 0.4rem;
+  border-radius: 10px;
+  font-weight: 600;
+}
+
+.btn {
+  cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.3rem;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 50%;
+  border-radius: 20px;
+  background-color: gray;
+}
+.modal .text-form {
+  padding: 9px;
+  font-size: 22px;
+  border-width: 0px;
+  border-color: #ed0000;
+  background-color: #ffffff;
+  color: #000000;
+  border-style: solid;
+  border-radius: 30px;
+  box-shadow: 0px 0px 8px rgba(66, 66, 66, 0.2);
+  text-shadow: 0px 0px 0px rgba(66, 66, 66, 0.75);
+  margin-top: 1rem;
+}
+.modal .description-form {
+  height: 100px;
+  resize: none;
+}
+.modal .title-form {
+  font-size: 1.4rem;
+}
+.modal .date-form {
+  padding: 9px;
+  font-size: 22px;
+  border-width: 0px;
+  border-color: #ed0000;
+  background-color: #ffffff;
+  color: #000000;
+  border-style: solid;
+  border-radius: 30px;
+  box-shadow: 0px 0px 8px rgba(66, 66, 66, 0.2);
+  text-shadow: 0px 0px 0px rgba(66, 66, 66, 0.75);
+  margin-top: 1rem;
+}
+.modal .important-form {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  -moz-user-select: none;
+       user-select: none; /* Standard syntax */
+  width: 210px;
+  height: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+.modal .not-important {
+  color: #ed0000;
+}
+.modal .important {
+  color: #02f32e;
+}
+.modal .close-modal {
+  display: inline-block;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+}
+.modal .line {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  transition: transform 0.2s ease;
+}
+.modal .line:first-child {
+  transform: rotate(45deg);
+}
+.modal .line:last-child {
+  transform: rotate(-45deg);
+}
+.modal .submit-btn {
+  color: rgb(254, 254, 254);
+  font-weight: 600;
+  background-color: rgb(221, 76, 61);
+  padding: 0.5rem 5rem;
+  border-radius: 20px;
+  margin-top: auto;
+  margin-bottom: 1rem;
 }
 
 @media only screen and (min-width: 701px) {
@@ -140,6 +313,15 @@
 @media only screen and (max-width: 700px) {
   .nav-bar {
     display: none;
+  }
+  .task-el {
+    width: 300px;
+  }
+  .add-task-el {
+    width: 300px;
+  }
+  .main {
+    grid-column: 1/4;
   }
 }
 html, body, div, span, applet, object, iframe,
