--- a/src/style.scss
+++ b/src/style.scss
@@ -403,7 +403,9 @@ body{
 
 
 
-    .submit-btn{
+    
+
+    .btn{
         color: $color2;
         font-weight: 600;
         background-color: $color1;
@@ -412,7 +414,10 @@ body{
         margin-top: auto;
         margin-bottom: 1rem;
     }
-
+    .delete-btn{
+        margin-top: 0;
+        margin-bottom: 0.3rem;
+    }
 }
 
 .add-modal{
