--- a/src/style.css
+++ b/src/style.css
@@ -142,7 +142,7 @@ body {
   padding-top: 2rem;
 }
 
-.all-container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -166,7 +166,8 @@ body {
   width: 25px;
   margin: 1rem;
 }
-.task-el .show-btn {
+.task-el .show-btn,
+.task-el .recover-btn {
   margin-left: auto;
   color: white;
   background-color: red;
@@ -187,7 +188,9 @@ body {
   border-radius: 20px;
   padding: 0 0.7rem;
 }
-.add-task-el .new-btn {
+
+.recover-btn,
+.new-btn {
   background-color: rgb(221, 76, 61);
   color: white;
   background-color: red;
@@ -324,7 +327,7 @@ body {
   margin-bottom: 1rem;
 }
 .modal .delete-btn {
-  margin-top: 0rem;
+  margin-top: 0;
   margin-bottom: 0.3rem;
 }
 
