--- a/src/style.scss
+++ b/src/style.scss
@@ -181,7 +181,7 @@ body{
 }
 
 //all.js
-.all-container{
+.container{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -217,7 +217,8 @@ body{
 
     }
 
-    .show-btn{
+    .show-btn,
+    .recover-btn{
         margin-left: auto;
         color: white;
         background-color: red;
@@ -225,6 +226,7 @@ body{
         border-radius: 10px;
         font-weight: 600;
     }
+    
 
 
 }
@@ -241,16 +243,19 @@ body{
     border-radius: 20px;
     padding: 0 0.7rem;   
 
-    .new-btn{
-        background-color: $color1;
-        color: white;
-        background-color: red;
-        padding: 0.4rem;
-        border-radius: 10px;
-        font-weight: 600;
-        //margin-left: auto;
-    }
+    
 }
+.recover-btn,
+.new-btn{
+    background-color: $color1;
+    color: white;
+    background-color: red;
+    padding: 0.4rem;
+    border-radius: 10px;
+    font-weight: 600;
+    //margin-left: auto;
+}
+
 
 .btn{
     cursor: pointer;
