add add-project Modal

--- a/src/style.css
+++ b/src/style.css
@@ -220,6 +220,11 @@ body {
   padding: 0 0.7rem;
 }
 
+.add-project-el {
+  background: rgb(99, 168, 58);
+  background: linear-gradient(107deg, rgb(99, 168, 58) 2%, rgb(47, 224, 202) 100%);
+}
+
 .recover-btn,
 .new-btn {
   background-color: rgb(221, 76, 61);
