--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,10 @@ body {
   padding-top: 2rem;
 }
 
+.all-container {
+  gap: 1rem;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -154,7 +158,6 @@ body {
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-top: 1rem;
   width: 450px;
   height: 50px;
   background-color: rgb(244, 238, 238);
@@ -178,6 +181,10 @@ body {
 
 .task-el-important {
   background-color: #02f32e;
+}
+
+.trash-container {
+  gap: 1rem;
 }
 
 .projects-container {
