--- a/src/style.scss
+++ b/src/style.scss
@@ -246,14 +246,20 @@ body{
     gap:1rem;
 }
 .project-el{
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap:1rem;
     background: rgb(99,168,58);
     background: linear-gradient(107deg, rgba(99,168,58,1) 2%, rgba(47,224,202,1) 100%);
     padding: 2rem;
     border-radius: 20px;
 
     .project-bar{
+        width: 100%;
         display: flex;
+        flex-direction: row;
         align-items: center;
         justify-content: space-between;
         
