--- a/src/style.scss
+++ b/src/style.scss
@@ -305,12 +305,13 @@ body{
 
         .more-btn{
         margin-left: auto;
-        color: white;
-        background-color: rgb(178, 0, 248);
         
+       
         padding: 0.4rem;
-        border-radius: 10px;
-        font-weight: 600;
+         >img{
+            width: 40px;
+       height: 40px;
+         }
         }
         
     }
