--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,7 @@ body {
   gap: 1rem;
   padding: 2rem;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .task-in-trash-el {
@@ -190,6 +191,7 @@ body {
   height: 25px;
   width: 25px;
   margin: 1rem;
+  accent-color: rgb(27, 235, 27);
 }
 .task-el .task-date {
   margin-left: auto;
@@ -209,6 +211,7 @@ body {
 
 .task-el.overdue .task-date {
   color: rgb(221, 76, 61);
+  font-weight: 800;
 }
 
 .project-el {
